# swagger.yaml
@@ -960,6 +960,53 @@ paths:
                   Message:
                     type: string
                     example: "Error message here"
+  /users/get-all:
+    get:
+      tags:
+        - administration users
+      summary: Get all users in the organization
+      description: Fetches all users belonging to the same organization as the authenticated user.
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    username:
+                      type: string
+                      example: "peter"
+                    isOrgLeader:
+                      type: boolean
+                      example: false
+        "401":
+          description: Unauthorized access
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Unauthorized
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal Server Error
 
 security:
   - bearerAuth: []
